src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Analysis_Workflow__c</fullName>
        <description>Applies to kit products only. Required field for Sample Manifest export integration.
(The format used is &lt;App&gt;&lt;App Version&gt;&lt;Workflow Tag&gt;&lt;Workflow version&gt;)</description>
        <inlineHelpText>Applies to kit products only. Required field for Sample Manifest export integration.
(The format used is &lt;App&gt;&lt;App Version&gt;&lt;Workflow Tag&gt;&lt;Workflow version&gt;)</inlineHelpText>
        <label>Analysis Workflow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>reads_to_variants_v2.0.0</fullName>
                </value>
                <value>
                    <fullName>helix_reads_to_variants_v2.1.0</fullName>
                </value>
                <value>
                    <fullName>helix_r2v_v2.1.0</fullName>
                </value>
                <value>
                    <fullName>helix_r2v_v2.2.0-WF1.0.0</fullName>
                </value>
                <value>
                    <fullName>helix_r2v_v2.2.1-WF1.0.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppID__c</fullName>
        <description>Unique Helix Application ID</description>
        <inlineHelpText>Unique Helix Application ID</inlineHelpText>
        <label>AppID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Content_Value__c</fullName>
        <description>Minimum Fee specific to this APP product. Used for calculation of Revenue for Partner and Helix. If Sequencing Fee &lt; Minimum Fee, Minimum Fee will be used as &quot;New Cust Revenue&quot;</description>
        <inlineHelpText>Minimum Fee specific to this APP product. Used for calculation of Revenue for Partner and Helix. If Sequencing Fee &lt; Minimum Fee, Minimum Fee will be used as &quot;New Cust Revenue&quot;</inlineHelpText>
        <label>Minimum Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <description>Applies to kit products only. Required field for Sample Manifest export integration.</description>
        <inlineHelpText>Applies to kit products only. Required field for Sample Manifest export integration.</inlineHelpText>
        <label>Delivery Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kit_Revenue__c</fullName>
        <inlineHelpText>Used for calculation of Helix Sequence Revenue Unit Price on 3rd Party Orders with Kit...Helix Sequence Revenue Unit Price = &quot;New Cust Revenue&quot; from App Product record -  &quot;Kit Revenue&quot; from App Product Record</inlineHelpText>
        <label>Kit Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Fee__c</fullName>
        <description>New Cust Revenue is the greater of Sequencing Fee + Kit Revenue or Minimum Fee. New Cust Revenue is used to establish Net of Processing revenue for revenue share calculations.</description>
        <formula>If( Processing_Fee__c + Kit_Revenue__c &gt; App_Content_Value__c ,Processing_Fee__c + Kit_Revenue__c ,App_Content_Value__c )</formula>
        <inlineHelpText>New Cust Revenue is the greater of Sequencing Fee + Kit Revenue or Minimum Fee. New Cust Revenue is used to establish Net of Processing revenue for revenue share calculations.</inlineHelpText>
        <label>New Cust Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account for the partner supplying this application product.</description>
        <inlineHelpText>Account for the partner supplying this application product.</inlineHelpText>
        <label>App Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_End_Date__c</fullName>
        <label>Partner Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Start_Date__c</fullName>
        <label>Partner Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Share__c</fullName>
        <description>Fees paid to a Sourcing Partner for Partner-Sourced Customer subsequent purchases. % based on List Price and deducted from the Helix Sequencing Revenue.</description>
        <inlineHelpText>Fees paid to a Sourcing Partner for Partner-Sourced Customer subsequent purchases. % based on List Price and deducted from the Helix Sequencing Revenue.</inlineHelpText>
        <label>Partner Referral Fee %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Revenue_Share_PCT__c</fullName>
        <description>Contracted Revenue Share % for Partner</description>
        <inlineHelpText>Contracted Revenue Share % for Partner</inlineHelpText>
        <label>Partner Revenue Share %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prep_Request__c</fullName>
        <description>Applies to kit products only. Required field for Sample Manifest export integration.</description>
        <inlineHelpText>Applies to kit products only. Required field for Sample Manifest export integration.</inlineHelpText>
        <label>Prep Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Helix Saliva Extraction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Fee__c</fullName>
        <description>Sequencing Fee specific to this APP product. Used for calculation of Revenue for Partner and Helix. If Sequencing Fee &gt; Minimum Fee, it will be used as &quot;New Cust Revenue&quot; in calculation engine.</description>
        <inlineHelpText>Sequencing Fee specific to this APP product. Used for calculation of Revenue for Partner and Helix. If Sequencing Fee &gt; Minimum Fee, it will be used as &quot;New Cust Revenue&quot; in calculation engine.</inlineHelpText>
        <label>Sequencing Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Yield__c</fullName>
        <description>Required Yield in GB. Applies to kit products only. Required field for Sample Manifest export integration.</description>
        <inlineHelpText>Required Yield in GB. Applies to kit products only. Required field for Sample Manifest export integration.</inlineHelpText>
        <label>Required Yield</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>6.1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Source__c</fullName>
        <description>Applies to kit products only. Required field for Sample Manifest export integration.</description>
        <inlineHelpText>Applies to kit products only. Required field for Sample Manifest export integration.</inlineHelpText>
        <label>Sample Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Saliva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KIT</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>S&amp;H</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Char_Record_ID__c</fullName>
        <description>converts 15-char record Id to 18-char format which is required for Boomi and other items.</description>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <inlineHelpText>converts 15-char record Id to 18-char format which is required for Boomi and other items.</inlineHelpText>
        <label>18-Char Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productuniquekey__c</fullName>
        <description>Standard ProductCode field doesn&apos;t provide for unique attribute. This field will be populated from Product Code via WFR during product record creation and will block creation of records that are not unique.</description>
        <inlineHelpText>Standard ProductCode field doesn&apos;t provide for unique attribute. This field will be populated from Product Code via WFR during product record creation and will block creation of records that are not unique.</inlineHelpText>
        <label>productuniquekey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>APP_RT</fullName>
        <active>true</active>
        <description>Record Type for App products</description>
        <label>APP RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>KIT_RT</fullName>
        <active>true</active>
        <description>Record Type for Kit products</description>
        <label>KIT RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_RT</fullName>
        <active>true</active>
        <description>Record Type for non kit or app products</description>
        <label>Other RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>S_H_RT</fullName>
        <active>true</active>
        <description>Shipping &amp; Handling Record Type</description>
        <label>S&amp;H RT</label>
    </recordTypes>
</CustomObject>